--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600|Roboto:300,300i,400,400i,500,500i,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700,900');
+
 body {
     no repeat center top;
     background-color: lightgrey;
@@ -12,3 +13,14 @@ body {
     font-size: 45px;
     font-weight: 600;
  }
+
+ .navbar {
+    background-color: hsl(60, 100%, 60%);
+    font-weight: 900;
+    height: 100px;
+    letter-spacing: 1px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    width: 100%;
+}
