--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700,900');
 
 body {
-    no repeat center top;
-    background-color: lightgrey;
     color: black;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 20px; 
     font-weight: 400;
  }
@@ -14,6 +12,4 @@ body {
     font-weight: 600;
  }
 
- .navbar {
-    background-color: hsl(60, 100%, 60%);
  }
