--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,8 +11,13 @@ body {
  h1{
     font-size: 45px;
     font-weight: 600;
+    color: black;
  }
+h2{
+    color: black;
+    font-size: 30px;
 
+}
  img{
     max-width: 100%;
     height: auto;
