--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,9 @@ body {
  h1{
     font-size: 45px;
     font-weight: 600;
-    color: black;
+    color: white;
+    background-color: black;
+    padding: 10px;
  }
 h2{
     color: black;
