--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,12 +24,12 @@ h2{
 }
  img{
     max-width: 100%;
-    height: 250px;
+    border: 2px solid rgb(3, 187, 162);
  }
 
  a{
     color: rgb(3, 187, 162);
-    text-decoration:none;
+    text-decoration: none;
   }
  a:hover {
     color: rgb(3, 150, 130);
